Menu z-index fix

--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,6 +1,7 @@
 body{background: url('../img/bg.jpg') center center;background-attachment:fixed;font-size:14px;overflow-x:hidden}
   h1{font-size:2.5em}
   h2{font-size:1.5em;text-transform:uppercase}
+  .navbar,.navbar-nav{z-index:100}
   .navbar .navbar-nav .nav-item .nav-link{color:#999;font-size:1em;font-weight:bold}
     .navbar .navbar-nav .nav-item .nav-link:hover{color:#fff}
 .carousel-inner .carousel-control-next{opacity:1}
